add indexes, fix Integer allocations, move to java8